Conversion to .APK

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
@@ -23,7 +23,7 @@ jobs:
           sudo apt update
           sudo apt install -y python3-pip git zip unzip openjdk-17-jdk
           pip install --upgrade pip
-          pip install buildozer cython
+          pip install buildozer cython virtualenv
 
       - name: Initialize Buildozer
         run: |
@@ -33,7 +33,8 @@ jobs:
         run: buildozer -v android debug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: myapp-debug.apk
+          name: myapp-debug-apk
           path: bin/*.apk
+
