--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,14 +22,14 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install system dependencies
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y openjdk-17-jdk unzip zip git python3-pip
           pip install --upgrade pip
           pip install buildozer cython virtualenv
 
-      - name: Install Android SDK and Build-tools
+      - name: Install Android SDK & tools
         run: |
           mkdir -p $ANDROID_SDK_ROOT
           cd $ANDROID_SDK_ROOT
@@ -40,11 +40,22 @@ jobs:
           yes | cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
           cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-31" "build-tools;33.0.2"
 
-      - name: Add SDK tools to PATH
+      - name: Add Android tools to PATH
         run: |
           echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
           echo "$ANDROID_SDK_ROOT/build-tools/33.0.2" >> $GITHUB_PATH
           echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
+
+      - name: Initialize Buildozer (if needed)
+        run: |
+          if [ ! -f buildozer.spec ]; then
+            buildozer init
+            sed -i 's/^requirements.*/requirements = python3,kivymd,kivy,pillow/' buildozer.spec
+            sed -i 's/^# *android.sdk.*/android.sdk = 33/' buildozer.spec
+            sed -i 's/^# *android.ndk.*/android.ndk = 25b/' buildozer.spec
+            sed -i 's/^# *android.api.*/android.api = 31/' buildozer.spec
+            echo "android.accept_sdk_license = True" >> buildozer.spec
+          fi
 
       - name: Build APK
         run: |
@@ -55,7 +66,3 @@ jobs:
         with:
           name: app-debug-apk
           path: bin/*.apk
-
-
-
-
