--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,22 +14,22 @@ jobs:
       ANDROID_HOME: ${{ github.workspace }}/android-sdk
 
     steps:
-      - name: Checkout code
+      - name: 🧾 Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: 🐍 Setup Python 3.10
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: Install system dependencies
+      - name: ⚙️ Install System & Python Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y openjdk-17-jdk unzip zip git python3-pip
           pip install --upgrade pip
           pip install buildozer cython virtualenv
 
-      - name: Install Android SDK and Build Tools
+      - name: 📦 Install Android SDK & Build Tools
         run: |
           mkdir -p $ANDROID_SDK_ROOT
           cd $ANDROID_SDK_ROOT
@@ -38,25 +38,26 @@ jobs:
           mkdir -p cmdline-tools/latest
           mv cmdline-tools/cmdline-tools/* cmdline-tools/latest/
           yes | cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --licenses
-          cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-31" "build-tools;33.0.2"
+          cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT \
+            "platform-tools" "platforms;android-31" "build-tools;33.0.2"
 
-      - name: Add Android tools to PATH
+      - name: 🛣 Update PATH for Android tools
         run: |
           echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
           echo "$ANDROID_SDK_ROOT/build-tools/33.0.2" >> $GITHUB_PATH
           echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
 
-      - name: Create or clean buildozer.spec
+      - name: 🧹 Auto-Fix or Generate `buildozer.spec`
         run: |
           if [ ! -f buildozer.spec ]; then
+            echo "::warning ::No buildozer.spec found, generating one"
             buildozer init
           fi
-
-          # Clean duplicate lines
+          # Remove duplicated or outdated config
+          sed -i '/^requirements/d' buildozer.spec
           sed -i '/^android.ndk/d' buildozer.spec
           sed -i '/^android.sdk/d' buildozer.spec
           sed -i '/^android.api/d' buildozer.spec
-          sed -i '/^requirements/d' buildozer.spec
           sed -i '/^android.accept_sdk_license/d' buildozer.spec
 
           echo "requirements = python3,kivymd,kivy,pillow" >> buildozer.spec
@@ -65,18 +66,17 @@ jobs:
           echo "android.api = 31" >> buildozer.spec
           echo "android.accept_sdk_license = True" >> buildozer.spec
 
-      - name: Check for main.py
+      - name: 🛑 Stop if `main.py` is missing
         run: |
           if [ ! -f main.py ]; then
             echo "::error ::main.py not found — please add your app's main file"
             exit 1
           fi
 
-      - name: Build APK
-        run: |
-          buildozer -v android debug
+      - name: 🏗️ Build APK
+        run: buildozer -v android debug
 
-      - name: Upload APK
+      - name: 📤 Upload .apk file
         uses: actions/upload-artifact@v4
         with:
           name: app-debug-apk
