--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,37 +2,37 @@ name: Build and Export Kivy APK
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build-apk:
     runs-on: ubuntu-24.04
+    permissions:
+      contents: read
 
     steps:
-      - name: 🔁 Checkout code
+      - name: 📥 Checkout Repository
         uses: actions/checkout@v4
 
-      - name: 🐍 Set up Python
-        uses: actions/setup-python@v4
+      - name: 🐍 Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: 📦 Install Buildozer and dependencies
+      - name: 🧰 Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y zip unzip openjdk-17-jdk python3-pip git
+          sudo apt install -y python3-pip zip unzip openjdk-17-jdk
           pip install --upgrade pip
-          pip install cython
           pip install buildozer
 
-      - name: 📂 Build APK using Buildozer
+      - name: 🔨 Build APK
         run: |
           buildozer android debug
 
-      - name: 🚀 Upload APK artifact
+      - name: 📦 Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: password-generator-apk
           path: bin/*.apk
-
-
