--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
           sudo apt update
           sudo apt install -y python3-pip zip unzip openjdk-17-jdk
           pip install --upgrade pip
+          pip install Cython
           pip install buildozer
 
       - name: 🔨 Build APK
