--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,34 +5,39 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+
 jobs:
   build-apk:
     runs-on: ubuntu-24.04
-    permissions:
-      contents: read
 
     steps:
-      - name: 📥 Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🐍 Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: 🧰 Install dependencies
+      - name: Install system dependencies
         run: |
           sudo apt update
-          sudo apt install -y python3-pip zip unzip openjdk-17-jdk
-          pip install --upgrade pip
+          sudo apt install -y zip unzip openjdk-17-jdk python3-pip libffi-dev libssl-dev \
+            libsqlite3-dev zlib1g-dev libjpeg-dev libfreetype6-dev
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
           pip install Cython
           pip install buildozer
 
-      - name: 🔨 Build APK
+      - name: Build APK with Buildozer
         run: |
           buildozer android debug
 
-      - name: 📦 Upload APK
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: password-generator-apk
